--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,4 +11,4 @@ set_directory_properties(DiscreteMath/CompressionAlgos/HuffmanAlgo)
 
 add_executable(Train main.cpp)
 add_executable(Test test.cpp)
-add_executable(Discrete_algo test.cpp DiscreteMath/CompressionAlgos/HuffmanAlgo/Node.h DiscreteMath/CompressionAlgos/HuffmanAlgo/HuffmanTree.h DiscreteMath/CompressionAlgos/Hu-Tucker/HuTucker.cpp DiscreteMath/CompressionAlgos/Hu-Tucker/HuTucker.h "DiscreteMath/CompressionAlgos/HuffmanAlgoO(n)/HuffmanAlgo.cpp" "DiscreteMath/CompressionAlgos/HuffmanAlgoO(n)/HuffmanAlgo.h" CS/Algos/Sort/radix_sort/RadixSort.cpp CS/Algos/Sort/radix_sort/RadixSort.h DiscreteMath/CompressionAlgos/LZ77/LZ77.cpp DiscreteMath/CompressionAlgos/LZ77/LZ77.h DiscreteMath/CompressionAlgos/LZ78/LZ78.cpp DiscreteMath/CompressionAlgos/LZ78/LZ78.h DiscreteMath/CompressionAlgos/LZW/LZW.cpp DiscreteMath/CompressionAlgos/LZW/LZW.h)
+add_executable(Discrete_algo test.cpp DiscreteMath/CompressionAlgos/HuffmanTree.h DiscreteMath/CompressionAlgos/HuTucker.h "DiscreteMath/CompressionAlgos/HuffmanAlgoO(n).h" CS/Algos/Sort/RadixSort.h DiscreteMath/CompressionAlgos/LZ77.h DiscreteMath/CompressionAlgos/LZ78.h DiscreteMath/CompressionAlgos/LZW.h)
