--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,4 +11,4 @@ set_directory_properties(DiscreteMath/CompressionAlgos/HuffmanAlgo)
 
 add_executable(Train main.cpp)
 add_executable(Test test.cpp)
-add_executable(Discrete_algo test.cpp DiscreteMath/CompressionAlgos/HuffmanTree.h DiscreteMath/CompressionAlgos/HuTucker.h "DiscreteMath/CompressionAlgos/HuffmanAlgoO(n).h" CS/Algos/Sort/RadixSort.h DiscreteMath/CompressionAlgos/LZ77.h DiscreteMath/CompressionAlgos/LZ78.h DiscreteMath/CompressionAlgos/LZW.h DiscreteMath/CompressionAlgos/LZSS.h DiscreteMath/CompressionAlgos/LZMA.h DiscreteMath/CompressionAlgos/BWT.h CS/Structures/BinaryHeap.h)
+add_executable(Discrete_algo test.cpp DiscreteMath/CompressionAlgos/HuffmanTree.h DiscreteMath/CompressionAlgos/HuTucker.h "DiscreteMath/CompressionAlgos/HuffmanAlgoO(n).h" CS/Algos/Sort/RadixSort.h DiscreteMath/CompressionAlgos/LZ77.h DiscreteMath/CompressionAlgos/LZ78.h DiscreteMath/CompressionAlgos/LZW.h DiscreteMath/CompressionAlgos/LZSS.h DiscreteMath/CompressionAlgos/LZMA.h DiscreteMath/CompressionAlgos/BWT.h CS/Structures/BinaryHeap.h CS/Structures/BinomialHeap.h)
